# MeshEvolver

./: ROADMAP.md  back.md  guides.md  readme.md
backend/: requirements.txt
backend/src/: __init__.py  main.py
backend/tests/: test_api.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Scene.tsx
rust_core/: Cargo.toml  pyproject.toml
rust_core/src/: lib.rs
